# mm-presentations

./: .gitignore  Klaus.html  LossLeader.html  README.md  YMCA.html  create_project.sh  demo-example copy.html  demo-example.html  fahren.html  pyproject.toml  sales_automation_analysis.html  script.js  stable_meetings copy 2.html  stable_meetings.html  styles copy.css  styles.css  styles_blackwhite.css
Maggie/: IMG_1846.heic  IMG_1847.heic  IMG_1848.heic
Mosaic-documentation/html/: annotated.html  annotated_dup.js  class_a_m_f_reader.html  class_a_m_f_reader.js  (+1989 more)
____mojoMosaic™ ALGO/: First prompt for PHP.txt  PHP Laravel.txt  ProjectWe messaging.json  ae-listening-context.txt  ai-pilot-implementation-plan.md  custom-instructions-about-ai.txt  custom-instructions-response-helper.txt  genesis-custom-instructions-about-ai.txt  genesis-custom-instructions-response-helper.txt  greeting-prompt.py  huyman-ai-symbiosis.txt  mojoMosaic TechStack.key  mojoMosaic-meeting-method-2.md  mojoMosaic-meeting-method.md  mojoMosaic™ Laravel Agent Executor.txt  mojoMosaic™ Oracle Part 2.txt  mojoPi-algorithm.md  mojoPi-neural-architecture.md  mojoPi-query-spec.txt  mojoPi™ Agent Executor.txt  mojoPi™ Presentation Algorithm.txt  mojoPi™ recipe.txt  mojomosaic-langchain-agent-executor.md  mojomosaic-minus-1-json-transformers.md  mojomosaic-plus-10-layer.md  mojomosaic_schema-relationships.txt  mosaic-JSONL.JSONL.txt  projectwe-mojomosaic-algorithm.md
docs/: PROCESS.md
images/: README.md
prompts/: INSTRUCTIONS_-_Distressingly_Honest_Tagline_Generator_DHTG_T3_v1.0.txt
(+1085 files in other folders)
