[tool.poetry]
name = "presentations"
version = "0.1.0"
description = "Create text based instant presentations with MojoMosaic™."
authors = ["David Matenaer"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
docling = {version = "^2.3.1", extras = ["all"]}
torch = "2.5.1"
torchaudio = "2.5.1"
numpy = "^1.26.4"
pandas = "^2.2.3"
typing-extensions = "^4.12.0"
typer = "^0.12.0"
scikit-learn = "^1.4.0"
nltk = "^3.8.1"
joblib = "^1.3.2"
colorama = "^0.4.6"
matplotlib = "^3.8.3"
aiofiles = "^23.2.1"
toml = "^0.10.2"
datasets = "^2.18.0"
sortedcontainers = "^2.4.0"
decorator = "^5.1.1"
msgpack = "^1.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
